--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     
 <h1>Mi primer proyecyo en Git y Github</h1>
 
+<!-- Un nuevo h2 -->
+<h2>subi mi primer proyecto a github</h2>
+
 
 <script src="sript.js"></script>
 </body>
